--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "build": "rollup --config rollup.config.js",
-    "test": "npm run-script build && jest && tsc --strict --noEmit test/type-test.ts"
+    "test": "npm run-script build && jest && tsd test/type-test.ts test"
   },
   "author": "",
   "license": "X11",
@@ -20,6 +20,7 @@
     "babel-preset-minify": "^0.5.1",
     "jest": "^26.5.3",
     "rollup": "^2.29.0",
+    "tsd": "^0.13.1",
     "typescript": "^4.0.3"
   }
 }
