--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "ruply",
-  "version": "1.0.0",
   "description": "run[If] and apply functions for easy-to-read code",
+  "version": "1.0.0",
   "main": "compiled/cjs/ruply.min.js",
-  "directories": {
-    "test": "test"
-  },
-  "scripts": {
-    "build": "rollup --config rollup.config.js",
-    "test": "npm run-script build && jest && tsd test"
-  },
-  "author": "",
-  "license": "X11",
+  "module": "compiled/esm/ruply.min.js",
+  "types": "index.d.ts",
+  "files": [
+    "source",
+    "compiled",
+    "index.d.ts",
+    "copying.txt"
+  ],
+  "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
@@ -22,5 +22,23 @@
     "rollup": "^2.56.3",
     "tsd": "^0.17.0",
     "typescript": "^4.4.2"
-  }
+  },
+  "scripts": {
+    "build": "rollup --config rollup.config.js",
+    "test": "npm run-script build && jest && tsd test"
+  },
+  "author": {
+    "name": "Nullhouse",
+    "url": "https://null.house"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Pimm/ruply.git"
+  },
+  "homepage": "https://null.house/open-source/ruply",
+  "keywords": [
+    "run",
+    "apply",
+    "runIf"
+  ]
 }
