Added Travis CI configuration.

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   },
   "scripts": {
     "build": "rollup --config rollup.config.js",
-    "test": "npm run-script build && jest && tsd test"
+    "test": "npm run-script build && jest && tsd test",
+    "coverage": "npm run-script build && jest --coverage --coverageReporters=text-lcov | coveralls"
   },
   "author": {
     "name": "Nullhouse",
